--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -9,8 +9,6 @@
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
 
-%---------------------------------------------------------
-Site Reliability Engineer at fintech company KarrotPay. Have led growth at infrastructure departments in two fintech companies as lead engineer and founding member. 12+ years of diverse software engineering experience with specialties in software architecture design, infrastructure operation, backend development, and security engineering.
+I have 5 years of experience operating Kubernetes clusters and am skilled in best practices and troubleshooting. I understand Kubernetes components such as CSI, CNI, and CRI, and I'm acquainted with common network solutions like Calico, Flannel, and Weave. I've demonstrated my ability to use the Operator pattern, integrating both infrastructure and operational capabilities into Kubernetes. I am familiar with the CNCF ecosystem, and I utilize it to benefit businesses and enhance development processes. My experience extends to microservices, allowing me to set up custom services tailored to enterprise needs. I am well-versed in both common public cloud and on-premises environments and adept at using Terraform to implement infrastructure as code.
 
-Love to contribute to open sources and tech communities by sharing knowledge and experience. Prefers a command line interface environment as a big fan of Vim, Linux, and macOS. Always trying to customize to find the most optimal environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools.
 \end{cvparagraph}
