--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,15 +11,11 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
-    }
+    {B.S. in Telecommunication Engineering} % Degree
+    {Zhengzhou University} % Institution
+    {Zhengzhou, Henan} % Location
+    {2007/9 - 2011/7} % Date(s)
+    {}
 
 %---------------------------------------------------------
 \end{cventries}
