--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -10,105 +10,97 @@
 \begin{cventries}
 
 %---------------------------------------------------------
+\cventry
+  {Senior Infrastructure engineer} % Job title
+  {Wish Inc.} % Organization
+  {} % Location
+  {2022/11 - 2023/8} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {Everything that matters.}
+      \item {Designed and provisioned the entire infrastructure on the AWS cloud to meet security compliance and acquire a business license for financial services in Korea.}
+      \item {Continuously improved the infrastructure architecture since launching the service. (currently 3.6 million users)}
+    \end{cvitems}
+  }
+
+
+%---------------------------------------------------------
   \cventry
-    {Site Reliability Engineer \& Infrastructure Team Lead} % Job title
-    {Danggeun Pay Inc. (KarrotPay)} % Organization
-    {Seoul, S.Korea} % Location
+    {Kubernetes Admin \& PaaS engineer} % Job title
+    {Paypal Inc.} % Organization
+    {} % Location
+    {2020/6 - 2022/10} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Leveraged the Kubernetes Operator pattern: implemented a controller to manage Elastic Load Balancers within PayPal's private data centers for a Kubernetes cluster,enhancing provisioning efficiency and resilience. }
+        \item {Kubernetes Bootstrapping \& Scaling: Designed and executed a specialized tool for bootstrapping and scaling Kubernetes, tailored specifically to the network and security specifications of FinTech systems. }
+        \item { SSO Integration \& Deployment: Spearheaded the integration of Single Sign-On (SSO) capabilities from its inception, further broadening its application across the entire platform, enhancing security and user experience. }
+        \item {Alerting System Integration: Seamlessly integrated both Prometheus and Zabbix to establish a robust alerting mechanism, ensuring real-time monitoring and rapid issue resolution. }
+      \end{cvitems}
+    }
+
+
+%---------------------------------------------------------
+  \cventry
+    {Devops engineer \& Kubernetes Admin} % Job title
+    {eBay Inc. \tiny{(via outsourcing)}} % Organization
+    {} % Location
     {Mar. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Everything that matters.}
-        \item {Designed and provisioned the entire infrastructure on the AWS cloud to meet security compliance and acquire a business license for financial services in Korea.}
-        \item {Continuously improved the infrastructure architecture since launching the service. (currently 3.6 million users)}
+        \item {Kubernetes Cluster Management on Azure: Spearheaded the installation, maintenance, and upgrading of Kubernetes clusters on Azure VMs, ensuring peak performance, security, and stability.}
+        \item {Rancher Deployment: Successfully deployed Rancher for organizational use and extended its capabilities to customers, simplifying the management and scaling of containerized applications.}
+        \item {Real-time Monitoring Solutions: Designed and implemented monitoring infrastructures using Prometheus, delivering real-time insights into cluster performance and significantly expediting troubleshooting efforts.        }
+        \item {CI/CD Integrations: Pioneered the architecture and deployment of Jenkins-based CI/CD pipelines, accommodating daily updates and agile weekly releases in response to evolving business needs.        }
+        \item {Cluster Automation: Authored advanced automation scripts in Shell, Python, and Ansible, streamlining cluster management and minimizing the need for manual oversight.        }
       \end{cvitems}
     }
-
 %---------------------------------------------------------
   \cventry
-    {Site Reliability Engineer} % Job title
-    {Danggeun Market Inc.} % Organization
-    {Seoul, S.Korea} % Location
-    {Feb. 2021 - Mar. 2021} % Date(s)
-    {
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Founding Member \& Director of Infrastructure Division} % Job title
-    {Kasa} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2018 - Jan. 2021} % Date(s)
+    {full stack engineer } % Job title
+    {eBay Inc. \tiny{(via outsourcing)}} % Organization
+    {} % Location
+    {Mar. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed on-boarding process to guide new engineers, help them to focus on the right tasks, and set expectations to help them be successful at Infrastructure team.}
-        \item {Migrated the orchestration system from DC/OS to Kubernetes which is based on AWS EKS. Managed 3 Kubernetes clusters and 300+ pods. Managed all Kubernetes manifests declaratively with Kustomize and ArgoCD.}
-        \item {Designed and managed complex network configurations on AWS with 4 VPC and 100+ subnets. Separated the development network and operation network according to financial regulations. Established dedicated network connections from AWS VPC to partners' on-premise network based on AWS Direct Connect with secure connection using IPsec VPN. Provisioned OpenVPN servers with LDAP integration.}
-        \item {Provisioned a observability system with Kafka, Elastic Stack(Filebeat, Heartbeat, APM Server, Logstash, Elasticsearch, Kibana). Collected log, uptime, tracing data from hosts, containers, pods and more. The ES cluster which has 9 nodes processed more than 1 billion documents per month. Wrote Terraform module to easily provision ES cluster on AWS EC2 instances.}
-        \item {Provisioned a monitoring system with Kafka, Telegraf, InfluxDB, Grafana. Collected metrics from hosts, containers, pods and more. Wrote Terraform module to easily provision InfluxDB with HA on AWS EC2 instances.}
-        \item {Introduced Kong API Gateway to easily connect all API microservices with a declarative management method based on Terraform and Atlantis to collaborate and audit change history.}
-        \item {Provisioned the Directory Service for employee identity management based on OpenLDAP which guarantees HA with multi-master replication.}
-        \item {Implemented Worker microservices consuming Kafka event topics for email, SMS, Kakaotalk and Slack notification. Developed in-house framework to easily build Kafka consumer microservice with common features including retry on failure, DLQ(Dead Letter Queue), event routing and more.}
-        \item {Introduced Elastic APM to help distributed tracing, trouble-shooting and performance testing in MSA.}
+        \item {API Gateway Implementation: Created a Node.js-based API gateway that smoothly integrated new backend services while preserving the legacy system. Implemented metrics for valuable business insights.}
+        \item {User Experience Enhancement: Revamped the website using ReactJS and Redux, resulting in a 30\% decrease in user-reported issues and improved user satisfaction.  }
+        \item {Cross-Team Collaboration: Established effective communication channels between American teams to ensure global standards alignment.    }
+        \item {Quality Assurance: Conducted regular code reviews, reducing post-deployment bugs by 10\% and maintaining coding consistency.    }
+        \item {Technical Documentation: Authored comprehensive technical documentation to enhance inter-team collaboration.    }
       \end{cvitems}
     }
 
 %---------------------------------------------------------
-  \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May. 2018} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
-      \end{cvitems}
-    }
+\cventry
+  {junior java engineer } % Job title
+  {Ericsson Inc. \tiny{(via outsourcing)}} % Organization
+  {} % Location
+  {Mar. 2021 - Present} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {End-to-End Development Contribution: Actively participated in the complete software development life cycle, from demand analysis to design and documentation. }
+      \item {Agile Development: Successfully delivered a series of system improvements using the Scrum methodology. }
+      \item {Efficient Software Delivery: Adopted continuous integration practices, leading to improved software quality and faster release times.    }
+      \item {Quality Assurance Tools: Aided in the development of advanced testing tools and simulators, ensuring a higher standard of product reliability.  }
+      \item {Technical Documentation: Authored and maintained detailed technical documents, including UML-based design proposals and user guides.     }
+    \end{cvitems}
+  }
 
 %---------------------------------------------------------
-  \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - Jun. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
-        \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
+\cventry
+  {junior java engineer } % Job title
+  {Tata Consultancy Services (TCS)} % Organization
+  {} % Location
+  {Mar. 2021 - Present} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {Online Quoting Tool: Key contributor to the development of a quick quote tool for bank brokers' websites, enabling customers to receive online indicative quotes with ease. }
+      \item {Advanced Functionality: Developed the core calculation layer within an MVC pattern tailored to specific insurance business requirements, resulting in more efficient data processing.}
+      \item {Quality Assurance \& Documentation: Spearheaded the creation of project documents, work quality records, and ensured software quality by isolating and resolving defects through rigorous testing phases.  }
+      \item {Database Modeling: Constructed persistent entities aligned with the business model, streamlining data storage and retrieval processes. }
+    \end{cvitems}
+  }
 
 %---------------------------------------------------------
 \end{cventries}
