--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,13 +17,13 @@
   {2022/11 - 2023/8} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Everything that matters.}
-      \item {Designed and provisioned the entire infrastructure on the AWS cloud to meet security compliance and acquire a business license for financial services in Korea.}
-      \item {Continuously improved the infrastructure architecture since launching the service. (currently 3.6 million users)}
+      \item {Kubernetes Cluster Management on AWS: Upgraded EKS(Amazon Elastic Kubernetes Service) from version 1.21 to 1.24 with Blue-green upgrade strategy, including migrating from Docker to Containerd, transitioning from in-tree csi to out-tree csi, and deprecating older APIs, all without causing any downtime.}
+      \item {Leveraged the Kubernetes Operator pattern: implemented a controller to manage Kafka topic provisioning by using crossplane/provider-template.}
+      \item {Led the development of an internal developer platform, streamlining workflows and automating processes, resulting in faster development cycles and increased business impact}
     \end{cvitems}
   }
 
-
+  
 %---------------------------------------------------------
   \cventry
     {Kubernetes Admin \& PaaS engineer} % Job title
@@ -45,7 +45,7 @@
     {Devops engineer \& Kubernetes Admin} % Job title
     {eBay Inc. \tiny{(via outsourcing)}} % Organization
     {} % Location
-    {Mar. 2021 - Present} % Date(s)
+    {2018/7 - 2020/5} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Kubernetes Cluster Management on Azure: Spearheaded the installation, maintenance, and upgrading of Kubernetes clusters on Azure VMs, ensuring peak performance, security, and stability.}
@@ -60,7 +60,7 @@
     {full stack engineer } % Job title
     {eBay Inc. \tiny{(via outsourcing)}} % Organization
     {} % Location
-    {Mar. 2021 - Present} % Date(s)
+    {2016/3 - 2018/6} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {API Gateway Implementation: Created a Node.js-based API gateway that smoothly integrated new backend services while preserving the legacy system. Implemented metrics for valuable business insights.}
@@ -76,7 +76,7 @@
   {junior java engineer } % Job title
   {Ericsson Inc. \tiny{(via outsourcing)}} % Organization
   {} % Location
-  {Mar. 2021 - Present} % Date(s)
+  {2014/5 - 2016/3} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {End-to-End Development Contribution: Actively participated in the complete software development life cycle, from demand analysis to design and documentation. }
@@ -92,7 +92,7 @@
   {junior java engineer } % Job title
   {Tata Consultancy Services (TCS)} % Organization
   {} % Location
-  {Mar. 2021 - Present} % Date(s)
+  {2012/5 - 2014/4} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {Online Quoting Tool: Key contributor to the development of a quick quote tool for bank brokers' websites, enabling customers to receive online indicative quotes with ease. }
