--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -54,10 +54,12 @@
 \photo[circle,noedge,left]{./examples/profile}
 \name{Huang}{Liang}
 \position{Site Reliability Engineer{\enskip\cdotp\enskip}PaaS Engineer}
-%\address{235, World Cup buk-ro, Mapo-gu, Seoul, 03936, Republic of Korea}
+\address{Pudong, Shanghai}
 
 \mobile{(+86) 178-2161-4432}
 \email{huangliang1203@hotmail}
+\extrainfo{ 34 years old }
+ 
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -67,11 +69,10 @@
 % \kaggle{kaggle-id}
 % \hackerrank{hackerrank-id}
 % \googlescholar{googlescholar-id}{name-to-display}
-%% \firstname and \lastname will be used
+% % \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
-% \extrainfo{extra information}
 
-\quote{``Be the change that you want to see in the world."}
+%  \quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -93,14 +94,17 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
+\input{resume/education.tex}
+\input{resume/skills.tex}
 \input{resume/summary.tex}
+
 \input{resume/experience.tex}
 % \input{resume/honors.tex}
 % \input{resume/certificates.tex}
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
 % \input{resume/committees.tex}
-\input{resume/education.tex}
+
 % \input{resume/extracurricular.tex}
 
 
