update wish experence

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,9 +17,11 @@
   {2022/11 - 2023/8} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {Leveraged the Kubernetes Operator Pattern: implemented a controller to manage Kafka topic provisioning by using crossplane/provider-template.}
       \item {Kubernetes Cluster Management on AWS: Upgraded EKS(Amazon Elastic Kubernetes Service) from version 1.21 to 1.24 with Blue-green upgrade strategy, including migrating from Docker to Containerd, transitioning from in-tree csi to out-tree csi, and deprecating older APIs, all without causing any downtime.}
-      \item {Leveraged the Kubernetes Operator pattern: implemented a controller to manage Kafka topic provisioning by using crossplane/provider-template.}
-      \item {Led the development of an internal developer platform, streamlining workflows and automating processes, resulting in faster development cycles and increased business impact}
+      \item {Container Runtime Migration: Migrated Kubernetes container runtime from Docker to Containerd to align with industry standards.}
+      \item {Container Storage Interface Migration: Migrated Kubernetes from in-tree storage plugins to Container Storage Interface (CSI) drivers and the smooth transition for end-users. }
+      \item {Contribute to internal developer platform: streamlining workflows and automating processes with crossplane and OAM(kubevela), resulting in faster development cycles and increased business impact}
     \end{cvitems}
   }
 
