comment out front end

--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -26,9 +26,9 @@
 
 
 %---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Redux, React, HTML5, LESS, SASS} % Skills
+  % \cvskill
+  %   {Front-end} % Category
+  %   {Redux, React, HTML5, LESS, SASS} % Skills
 
 %---------------------------------------------------------
   \cvskill
