--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -9,7 +9,7 @@
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
 
-Experienced professional with 11 years in tech. Began with 6 years as a application developer, followed by 5 years focused on infrastructure. 
+Experienced professional with 11 years in tech. Began with 6 years as an application developer, followed by 5 years focused on infrastructure. 
 
 Have hands-on expertise in managing both on-premises infrastructure and public cloud environment(like aws, azure).
 
