--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -34,9 +34,9 @@
     {2020/6 - 2022/10} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Leveraged the Kubernetes Operator pattern: implemented a controller to manage Elastic Load Balancers within PayPal's private data centers for a Kubernetes cluster,enhancing provisioning efficiency and resilience. }
+        \item {Leveraged the Kubernetes Operator pattern: implemented a controller to manage Elastic Load Balancers in PayPal's private data centers for Kubernetes clusters,enhancing provisioning efficiency and resilience. }
         \item {Kubernetes Bootstrapping \& Scaling: Designed and executed a specialized tool for bootstrapping and scaling Kubernetes, tailored specifically to the network and security specifications of FinTech systems. }
-        \item { SSO Integration \& Deployment: Spearheaded the integration of Single Sign-On (SSO) capabilities from its inception, further broadening its application across the entire platform, enhancing security and user experience. }
+        \item {SSO Integration \& Deployment: Spearheaded the integration of Single Sign-On (SSO) capabilities from its inception, further broadening its application across the entire platform, enhancing security and user experience. }
         \item {Alerting System Integration: Seamlessly integrated both Prometheus and Zabbix to establish a robust alerting mechanism, ensuring real-time monitoring and rapid issue resolution. }
       \end{cvitems}
     }
@@ -50,7 +50,7 @@
     {2018/7 - 2020/5} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Kubernetes Cluster Management on Azure: Spearheaded the installation, maintenance, and upgrading of Kubernetes clusters on Azure VMs, ensuring peak performance, security, and stability.}
+        \item {Kubernetes Cluster Management on Azure: Led the deployment, optimization, and secure management of Kubernetes clusters on Azure VMs, ensuring consistent uptime, peak performance, and seamless upgrades.}
         \item {Rancher Deployment: Successfully deployed Rancher for organizational use and extended its capabilities to customers, simplifying the management and scaling of containerized applications.}
         \item {Real-time Monitoring Solutions: Designed and implemented monitoring infrastructures using Prometheus, delivering real-time insights into cluster performance and significantly expediting troubleshooting efforts.        }
         \item {CI/CD Integrations: Pioneered the architecture and deployment of Jenkins-based CI/CD pipelines, accommodating daily updates and agile weekly releases in response to evolving business needs.        }
