--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -53,7 +53,7 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \photo[circle,noedge,left]{./examples/profile}
 \name{Huang}{Liang}
-\position{Site Reliability Engineer{\enskip\cdotp\enskip}PaaS Engineer}
+\position{Kubernetes Admin{\enskip\cdotp\enskip}Infrastructure Engineer}
 \address{Pudong, Shanghai}
 
 \mobile{(+86) 178-2161-4432}
