reference xx-cn.tex

--- a/examples/resume-zn.tex
+++ b/examples/resume-zn.tex
@@ -94,11 +94,11 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{resume/education.tex}
-\input{resume/skills.tex}
-\input{resume/summary.tex}
+\input{resume-zn/education.tex}
+\input{resume-zn/skills.tex}
+\input{resume-zn/summary.tex}
 
-\input{resume/experience.tex}
+\input{resume-zn/experience.tex}
 % \input{resume/honors.tex}
 % \input{resume/certificates.tex}
 % \input{resume/presentation.tex}
