update profile for zn

--- a/examples/resume-zn/summary.tex
+++ b/examples/resume-zn/summary.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Summary}
+\cvsection{简介}
 
 
 %-------------------------------------------------------------------------------
@@ -9,19 +9,18 @@
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
 
-Experienced professional with 11 years in tech. Began with 6 years as an application developer, followed by 5 years focused on infrastructure. 
 
-Have hands-on expertise in managing both on-premises infrastructure and public cloud environment(like aws, azure).
+拥有11年工作经验。入行6年担任应用开发工程工程师，随后5年深耕于基础设施领域。
 
-Dedicated Kubernetes specialist with 5 years of hands-on experience in cluster operations.
+在公共云环境（如AWS、Azure）和私有数据中心方面，具有丰富的实践经验。
 
-Proven expertise in harnessing the Operator pattern to seamlessly integrate infrastructure and operational capabilities within Kubernetes.
+专业的Kubernetes专家，拥有5年Kubernetes集群最佳实践经验。
 
-Good understanding of Kubernetes and its components (including but not limited to CSI, CNI, and CRI). Familiar with common network solutions such as Calico, Flannel, and Weave.
+擅长利用Operator模式，将基础设施和运维能力无缝整合到Kubernetes中。
 
-Proficient in leveraging the CNCF ecosystem to drive business benefits and streamline development processes.
- 
+对Kubernetes及其组件有深入理解（包括但不限于CSI、CNI和CRI）。熟悉常见的网络解决方案，如Calico、Flannel和Weave。
 
+善于利用CNCF生态环境中的开源项目，为业务带来效能和优化开发流程。
 
 
 
