--- a/examples/resume-zn.tex
+++ b/examples/resume-zn.tex
@@ -53,12 +53,12 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \photo[circle,noedge,left]{./examples/profile}
 \name{黄}{亮}
-\position{Kubernetes Admin{\enskip\cdotp\enskip}Infrastructure Engineer}
-\address{Pudong, Shanghai}
+\position{Kubernetes管理员{\enskip\cdotp\enskip}基础设施工程师}
+\address{浦东, 上海}
 
 \mobile{(+86) 178-2161-4432}
 \email{huangliang1203@hotmail}
-\extrainfo{ 34 years old }
+\extrainfo{ 34岁 }
  
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
