--- a/examples/resume-zn/education.tex
+++ b/examples/resume-zn/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsection{学历}
 
 
 %-------------------------------------------------------------------------------
@@ -11,9 +11,9 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Telecommunication Engineering} % Degree
-    {Zhengzhou University} % Institution
-    {Zhengzhou, Henan} % Location
+    {本科 通信工程} % Degree
+    {郑州大学} % Institution
+    {郑州, 河南} % Location
     {2007/9 - 2011/7} % Date(s)
     {}
 
