--- a/examples/resume-zn/experience.tex
+++ b/examples/resume-zn/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Work Experience}
+\cvsection{工作经历}
 
 
 %-------------------------------------------------------------------------------
@@ -11,98 +11,116 @@
 
 %---------------------------------------------------------
 \cventry
-  {Senior Infrastructure engineer} % Job title
-  {Wish Inc.} % Organization
+  {资深基础设施工程师} % Job title
+  {Wish电商平台} % Organization
   {} % Location
   {2022/11 - 2023/8} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Leveraged the Kubernetes Operator Pattern: implemented a controller to manage Kafka topic provisioning by using crossplane/provider-template.}
-      \item {Kubernetes Cluster Management on AWS: Upgraded EKS(Amazon Elastic Kubernetes Service) from version 1.21 to 1.24 with Blue-green upgrade strategy without causing any downtime.}
-      \item {Container Runtime Migration: Migrated Kubernetes container runtime from Docker to Containerd to align with industry standards.}
-      \item {Container Storage Interface Migration: Migrated Kubernetes from in-tree storage plugins to Container Storage Interface (CSI) drivers and ensuring the smooth transition for end-users. }
-      \item {Contribute to internal developer platform: streamlining workflows and automating processes with argocd, crossplane and OAM(kubevela), resulting in faster development cycles and increased business impact}
+      \item {Kubernetes Operator模式的使用：使用crossplane生态里的provider template管理Kafka topic。}
+      \item {在AWS上的Kubernetes集群管理：采用蓝绿部署策略，将EKS（Amazon Elastic Kubernetes Service）在无宕机的情况下，从1.21版本升级到1.24版本。}
+      \item {容器运行时的迁移：将Kubernetes的容器运行时从Docker迁移到Containerd，以符合行业标准。}
+      \item {容器存储接口的迁移：从Kubernetes的内部存储插件迁移到Container Storage Interface（CSI）驱动，并确保终端用户平滑过渡。}
+      \item {内部开发平台的建设：利用argocd、crossplane和OAM(kubevela)简化工作流并自动化流程，从而加快开发周期并增加业务影响力。}
     \end{cvitems}
   }
 
+% 
+% 
+%
+% 
+% 
   
 %---------------------------------------------------------
   \cventry
-    {Kubernetes Admin \& PaaS engineer} % Job title
-    {Paypal Inc.} % Organization
+    {Kubernetes管理员 \& PaaS工程师} % Job title
+    {Paypal线支付平台} % Organization
     {} % Location
     {2020/6 - 2022/10} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Leveraged the Kubernetes Operator pattern: implemented a controller to manage Elastic Load Balancers in PayPal's private data centers for Kubernetes clusters,enhancing provisioning efficiency and resilience. }
-        \item {Kubernetes Bootstrapping \& Scaling: Designed and executed a specialized tool for bootstrapping and scaling Kubernetes, tailored specifically to the network and security specifications of FinTech systems. }
-        \item {SSO Integration \& Deployment: Spearheaded the integration of Single Sign-On (SSO) capabilities from its inception, further broadening its application across the entire platform, enhancing security and user experience. }
-        \item {Alerting System Integration: Seamlessly integrated both Prometheus and Zabbix to establish a robust alerting mechanism, ensuring real-time monitoring and rapid issue resolution. }
+        \item {Kubernetes Operator模式的使用： 使用Operator pattern来管理PayPal私有数据中心内的软负载设备，从而提高了配置效率和系统的弹性。}
+        \item {Kubernetes集群搭建：为了满足金融科技环境下的安全规格，设计并完成了一个专门的工具，用于Kubernetes集群的引导和扩展。}
+        \item {SSO集成及部署：设计和集成了Single Sign-On（SSO）功能，并进一步扩大其在整个平台上的应用，增强了安全性和用户体验。        }
+        \item {警报系统集成：无缝集成了Prometheus和Zabbix，建立了一个健壮的警报机制，确保了实时监控和快速的问题解决。 }
       \end{cvitems}
     }
 
 
+
+
+
+
+
+
+
+
 %---------------------------------------------------------
   \cventry
-    {Devops engineer \& Kubernetes Admin} % Job title
-    {eBay Inc. \tiny{(via outsourcing)}} % Organization
+    {Devops工程师 \& Kubernetes管理员} % Job title
+    {eBay Inc. \tiny{(外包岗)}} % Organization
     {} % Location
     {2018/7 - 2020/5} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Kubernetes Cluster Management on Azure: Led the deployment, optimization, and secure management of Kubernetes clusters on Azure VMs, ensuring consistent uptime, peak performance, and seamless upgrades.}
-        \item {Rancher Deployment: Successfully deployed Rancher for organizational use and extended its capabilities to customers, simplifying the management and scaling of containerized applications.}
-        \item {Real-time Monitoring Solutions: Designed and implemented monitoring infrastructures using Prometheus, delivering real-time insights into cluster performance and significantly expediting troubleshooting efforts.        }
-        \item {CI/CD Integrations: Pioneered the architecture and deployment of Jenkins-based CI/CD pipelines, accommodating daily updates and agile weekly releases in response to evolving business needs.        }
-        \item {Cluster Automation: Authored advanced automation scripts in Shell, Python, and Ansible, streamlining cluster management and minimizing the need for manual oversight.        }
+        \item {Azure上的Kubernetes集群管理：在Azure虚拟机上，实现了Kubernetes集群部署、优化和安全管理，确保持续的在线时间、最佳性能和无缝的升级。}
+        \item {Rancher部署：使用Rancher，简化开发者对集群使用，降低了对容器管理的门槛 }
+        \item {实时监控解决方案：使用Prometheus实施监控基础设施，为集群性能提供实时监控，并显著加快故障排查工作。        }
+        \item {CI/CD集成：设计并部署基于Jenkins的CI/CD流水线，以适应日常更新和敏捷的每周发布，以满足不断变化的业务需求。        }
+        \item { 集群自动化：使用Shell、Python和Ansible编写高级自动化脚本，简化集群管理，最大限度地减少手动监督的需求。       }
       \end{cvitems}
     }
+ 
+
 %---------------------------------------------------------
   \cventry
-    {full stack engineer } % Job title
-    {eBay Inc. \tiny{(via outsourcing)}} % Organization
+    {全栈工程师} % Job title
+    {eBay电商平台\tiny{(外包岗)}} % Organization
     {} % Location
     {2016/3 - 2018/6} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {API Gateway Implementation: Created a Node.js-based API gateway that smoothly integrated new backend services while preserving the legacy system. Implemented metrics for valuable business insights.}
-        \item {User Experience Enhancement: Revamped the website using ReactJS and Redux, resulting in a 30\% decrease in user-reported issues and improved user satisfaction.  }
-        \item {Cross-Team Collaboration: Established effective communication channels between American teams to ensure global standards alignment.    }
-        \item {Quality Assurance: Conducted regular code reviews, reducing post-deployment bugs by 10\% and maintaining coding consistency.    }
-        \item {Technical Documentation: Authored comprehensive technical documentation to enhance inter-team collaboration.    }
+        \item {API网关的实现：创建了一个基于Node.js的API网关，顺利地集成了新的后端服务，同时保留了遗留系统的价值，并对业务指标进行埋点监控。 }
+        \item {用户体验增强：使用ReactJS和Redux翻新了网站，导致用户报告的问题减少了30\%，并提高了用户满意度。 }
+        \item {跨团队合作：与美国团队之间建立了有效的沟通渠道，以确保全球标准的对齐。  }
+        \item {质量保证：进行定期的代码审查，将部署后的漏洞减少了10\%，并保持了编码的一致性。  }
+        \item {技术文档：编写了全面的技术文档，以增强团队间的合作。 }
       \end{cvitems}
     }
 
 %---------------------------------------------------------
 \cventry
-  {junior java engineer } % Job title
-  {Ericsson Inc. \tiny{(via outsourcing)}} % Organization
+  {java软件工程师 } % Job title
+  {爱立信 \tiny{(外包岗)}} % Organization
   {} % Location
   {2014/5 - 2016/3} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {End-to-End Development Contribution: Actively participated in the complete software development life cycle, from demand analysis to design and documentation. }
-      \item {Agile Development: Successfully delivered a series of system improvements using the Scrum methodology. }
-      \item {Efficient Software Delivery: Adopted continuous integration practices, leading to improved software quality and faster release times.    }
-      \item {Quality Assurance Tools: Aided in the development of advanced testing tools and simulators, ensuring a higher standard of product reliability.  }
-      \item {Technical Documentation: Authored and maintained detailed technical documents, including UML-based design proposals and user guides.     }
+      \item {端到端的开发：积极参与eMBMS系统(多媒体广播多播服务)的软件开发任务，独立完成需求分析，到软件功能的设计与编码。 }
+      \item {高效软件交付：采用持续集成方式，提高了软件质量和更快的发布时间。}
+      \item {敏捷开发：成功使用Scrum方法交付了一系列的系统改进。  }
+      \item {质量保证工具：编写测试模拟器，并使用开源的测试工具，对自己的产品，做详细的单元测试和集成测试，确保了产品的更高可靠性标准。}
+      \item { 技术文档：编写并维护详细的技术文档，包括基于UML的设计文档和用户指南。  }
     \end{cvitems}
   }
 
+ 
+
 %---------------------------------------------------------
 \cventry
-  {junior java engineer } % Job title
-  {Tata Consultancy Services (TCS)} % Organization
+  {java软件工程师} % Job title
+  {塔塔信息技术} % Organization
   {} % Location
   {2012/5 - 2014/4} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Online Quoting Tool: Key contributor to the development of a quick quote tool for bank brokers' websites, enabling customers to receive online indicative quotes with ease. }
-      \item {Advanced Functionality: Developed the core calculation layer within an MVC pattern tailored to specific insurance business requirements, resulting in more efficient data processing.}
-      \item {Quality Assurance \& Documentation: Spearheaded the creation of project documents, work quality records, and ensured software quality by isolating and resolving defects through rigorous testing phases.  }
-      \item {Database Modeling: Constructed persistent entities aligned with the business model, streamlining data storage and retrieval processes. }
+      \item {在线报价工具：在资深工程师的协助下，完成了保险领域里的保单快速报价功能，使客户能够轻松获得在线指示性报价。}
+      \item {MVC模式的使用：根据特定的保险业务需求，使用MVC模式，完成了核心计算层，从而实现了更高效的数据处理。}
+      \item {数据库建模：构建与业务模型对齐的持久实体，简化数据存储和检索过程。}
+      \item {质量保证和文档：创建项目文档，并通过严格的测试阶段隔离和解决缺陷，确保软件质量。  }
     \end{cvitems}
   }
+  
 
 %---------------------------------------------------------
 \end{cventries}
