--- a/examples/resume-zn/skills.tex
+++ b/examples/resume-zn/skills.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{技能}
 
 
 %-------------------------------------------------------------------------------
@@ -11,16 +11,16 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Cloud Native Technologies} % Category
+    {云原生技术} % Category
     {AWS, Kubernetes, Docker, Prometheus, Rancher, Packer, Terraform, Jenkins, Argocd} % Skills
 %---------------------------------------------------------
 \cvskill
-  {Programming} % Category
+  {编程语言} % Category
   {Golang, JAVA, Node, Shell scripting} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Back-end} % Category
+    {后端常用框架} % Category
     {Gin, go-gorm, Spring, REST API} % Skills
 
 
@@ -32,8 +32,8 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Languages} % Category
-    {English, Mandarin} % Skills
+    {工作语言} % Category
+    {英语, 普通话} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
