--- a/examples/resume-zn/summary.tex
+++ b/examples/resume-zn/summary.tex
@@ -10,9 +10,9 @@
 \begin{cvparagraph}
 
 
-拥有11年工作经验。入行6年担任应用开发工程工程师，随后5年深耕于基础设施领域。
+拥有11年工作经验。入行6年担任应用开发工程师，随后5年深耕于基础设施领域。
 
-在公共云环境（如AWS、Azure）和私有数据中心方面，具有丰富的实践经验。
+在公有云环境（如AWS、Azure）和私有数据中心方面，具有丰富的实践经验。
 
 专业的Kubernetes专家，拥有5年Kubernetes集群最佳实践经验。
 
