--- a/examples/resume-zn/summary.tex
+++ b/examples/resume-zn/summary.tex
@@ -9,20 +9,15 @@
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
 
+拥有11年工作经验。在初始的6年中，我担任应用开发工程师；之后的5年，我专注于云原生和基础设施领域领域。
 
-拥有11年工作经验。入行6年担任应用开发工程师，随后5年深耕于基础设施领域。
+我在公有云环境（例如AWS、Azure）及私有数据中心都有丰富的实践经验。
 
-在公有云环境（如AWS、Azure）和私有数据中心方面，具有丰富的实践经验。
+身为Kubernetes的领域专家，我具备5年的Kubernetes集群实践经验， 对其核心组件——控制面和数据面有着深入的专业认知。不仅理解Kubernetes的扩展（如CSI、CNI和CRI）而且还熟悉各种主流的网络解决方案，例如Calico、Flannel和Weave。
 
-专业的Kubernetes专家，拥有5年Kubernetes集群最佳实践经验。
+熟练掌握Operator模式，能够无缝地将基础设施和运维能力整合到Kubernetes中。
 
-擅长利用Operator模式，将基础设施和运维能力无缝整合到Kubernetes中。
-
-对Kubernetes及其组件有深入理解（包括但不限于CSI、CNI和CRI）。熟悉常见的网络解决方案，如Calico、Flannel和Weave。
-
-善于利用CNCF生态环境中的开源项目，为业务带来效能和优化开发流程。
-
-
+擅长利用CNCF生态中的开源项目(crossplane, argocd, harbor, helm)，为业务提供效能提升并优化开发流程。
 
 \end{cvparagraph}
 
