--- a/examples/resume-zn/experience.tex
+++ b/examples/resume-zn/experience.tex
@@ -11,25 +11,19 @@
 
 %---------------------------------------------------------
 \cventry
-  {资深基础设施工程师} % Job title
+  {资深基础设施平台工程师} % Job title
   {Wish电商平台} % Organization
   {} % Location
   {2022/11 - 2023/8} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Kubernetes Operator模式的使用：使用crossplane生态里的provider template管理Kafka topic。}
+      \item {Kubernetes Operator模式的使用：利用crossplane生态中的provider template，为专门管理Kafka topic设计并实现了高效的operator。}
       \item {在AWS上的Kubernetes集群管理：采用蓝绿部署策略，将EKS（Amazon Elastic Kubernetes Service）在无宕机的情况下，从1.21版本升级到1.24版本。}
       \item {容器运行时的迁移：将Kubernetes的容器运行时从Docker迁移到Containerd，以符合行业标准。}
       \item {容器存储接口的迁移：从Kubernetes的内部存储插件迁移到Container Storage Interface（CSI）驱动，并确保终端用户平滑过渡。}
       \item {内部开发平台的建设：利用argocd、crossplane和OAM(kubevela)简化工作流并自动化流程，从而加快开发周期并增加业务影响力。}
     \end{cvitems}
   }
-
-% 
-% 
-%
-% 
-% 
   
 %---------------------------------------------------------
   \cventry
