--- a/examples/resume-zn/summary.tex
+++ b/examples/resume-zn/summary.tex
@@ -9,9 +9,9 @@
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
 
-拥有11年工作经验。在初始的6年中，我担任应用开发工程师；之后的5年，我专注于云原生和基础设施领域领域。
+拥有11年工作经验。在初始的6年中，我担任应用开发工程师；之后的5年，专注于云原生和基础设施领域领域。
 
-我在公有云环境（例如AWS、Azure）及私有数据中心都有丰富的实践经验。
+在公有云环境（例如AWS、Azure）及私有数据中心都有丰富的实践经验。
 
 身为Kubernetes的领域专家，我具备5年的Kubernetes集群实践经验， 对其核心组件——控制面和数据面有着深入的专业认知。不仅理解Kubernetes的扩展（如CSI、CNI和CRI）而且还熟悉各种主流的网络解决方案，例如Calico、Flannel和Weave。
 
