--- a/examples/resume-zn.tex
+++ b/examples/resume-zn.tex
@@ -53,7 +53,7 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \photo[circle,noedge,left]{./examples/profile}
 \name{黄}{亮}
-\position{Kubernetes管理员{\enskip\cdotp\enskip}基础设施工程师}
+\position{Kubernetes管理员{\enskip\cdotp\enskip}基础设施平台工程师}
 \address{浦东, 上海}
 
 \mobile{(+86) 178-2161-4432}
